<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="hello">Jasper hello</string>
  <string name="app_name">SDP Scanner</string>
  <string name="Select_Device">Select Device</string>
  <string name="Discovery_Device_Service">Start SDP</string>
  <string name="Device_Name">Device</string>
  <string name="Device_Addr">Address</string>
  <string name="Supported_Profile">Supported Profile</string>
  <string name="Supported_Service">Supported Service</string>
  <string name="Title">Sdp Scanner</string>
  <string name="Target_Device">Target Device</string>
  <string name="Discovered_Profiles">Discovered Profiles</string>
  <string name="Ok">OK</string>
</resources>
