<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
      android:layout_width="45sp"
      android:layout_height="45sp"
      android:layout_marginLeft="10sp"
      android:src="@drawable/sdpscanner_icon"/>
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="13sp"
      android:layout_marginLeft="7sp"
      android:fontFamily="sans-serif"
      android:text="@string/Title"
      android:textSize="25sp"/>
  </LinearLayout>

  <View
    android:layout_width="match_parent"
    android:layout_height="3sp"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="20sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:background="@color/light_blue"/>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:background="@color/ltgray"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="30sp"
      android:layout_weight="1"
      android:layout_marginLeft="10sp"
      android:fontFamily="sans-serif-light"
      android:gravity="center_vertical"
      android:text="@string/Target_Device"
      android:textColor="@color/black"
      android:textSize="15sp"/>
    <Button
      android:id="@+id/select_device"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:paddingLeft="20sp"
      android:paddingRight="20sp"
      android:background="@drawable/button"
      android:fontFamily="sans-serif"
      android:onClick="onButtonClick"
      android:text="@string/Select_Device"
      android:textColor="@color/blue"
      android:textSize="15sp"
      />
  </LinearLayout>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:layout_marginBottom="10sp"
    android:layout_marginLeft="10sp"
    android:orientation="vertical"
    >
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
      <LinearLayout
        android:id="@+id/device_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
          android:id="@+id/device_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20sp"
          android:layout_marginRight="20sp"
          android:text="@string/Device_Name"
          android:textSize="15sp"/>
      </LinearLayout>
      <View
        android:id="@+id/device_underLine"
        android:layout_width="100sp"
        android:layout_height="3sp"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="15sp"
        android:background="@color/light_blue"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
      <LinearLayout
        android:id="@+id/addr_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
          android:id="@+id/device_addr"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20sp"
          android:layout_marginRight="20sp"
          android:text="@string/Device_Addr"
          android:textSize="13sp"/>
      </LinearLayout>
      <View
        android:id="@+id/addr_underLine"
        android:layout_width="100sp"
        android:layout_height="3sp"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="15sp"
        android:background="@color/light_blue"/>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:background="@color/ltgray"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="30sp"
      android:layout_weight="1"
      android:layout_marginLeft="10sp"
      android:fontFamily="sans-serif-light"
      android:gravity="center_vertical"
      android:text="@string/Discovered_Profiles"
      android:textColor="@color/black"
      android:textSize="15sp"/>
    <Button
      android:id="@+id/discovery_device_services"
      android:layout_width="wrap_content"
      android:layout_height="fill_parent"
      android:paddingLeft="20sp"
      android:paddingRight="20sp"
      android:background="@drawable/button"
      android:fontFamily="sans-serif"
      android:onClick="onButtonClick"
      android:text="@string/Discovery_Device_Service"
      android:textColor="@color/blue"
      android:textSize="15sp"/>
  </LinearLayout>
  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ProgressBar
      android:id="@+id/progress_bar"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"/>
    <ListView
      android:id="@+id/service_list"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_marginTop="15sp"
      android:layout_marginLeft="10sp"/>
  </RelativeLayout>

</LinearLayout>
